--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Jonathan Dray <jonathan.dray@gmail.com>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.6
-Homepage: https://code.google.com/p/go.net/
+Homepage: https://godoc.org/golang.org/x/net
 Vcs-Git: git://anonscm.debian.org/pkg-go/packages/golang-go.net.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-go/packages/golang-go.net.git;a=summary
 
