--- a/debian/rules
+++ b/debian/rules
@@ -11,7 +11,7 @@ export DH_VERBOSE=1
 
 # GOPKG is the upstream path which you would normally “go get”.
 # Using it allows us to build applications without patching locations.
-GOPKG := code.google.com/p/go.net
+GOPKG := golang.org/x/net
 
 # Temporary working directory to which the source will be copied, then
 # compiled.
